--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <!-- Fixed Left Sidebar Navigation -->
     <aside class="cv-sidebar" id="cv-sidebar">
         <nav class="cv-nav" id="cv-nav">
-            <a href="#hero" class="cv-nav-link">About</a>
-            <a href="#recent-posts" class="cv-nav-link">Posts</a>
-            <a href="#highlights" class="cv-nav-link">Highlights</a>
-            <a href="#work-experience" class="cv-nav-link">Work</a>
+            <a href="#work-experience" class="cv-nav-link">Experience</a>
             <a href="#education" class="cv-nav-link">Education</a>
-            <a href="#publications" class="cv-nav-link">Research</a>
-            <a href="blog.html" class="cv-nav-link cv-nav-link-external">All Posts</a>
+            <a href="#publications" class="cv-nav-link">Publications</a>
+            <!-- <a href="#skills" class="cv-nav-link">Skills</a> -->
+            <a href="#highlights" class="cv-nav-link">Highlights</a>
+            <a href="blog.html" class="cv-nav-link cv-nav-link-external">Posts</a>
         </nav>
     </aside>
     
@@ -38,40 +37,11 @@
     <main class="main-content main-content-with-sidebar">
         <div class="container">
             
-            <!-- Hero/Intro Section -->
-            <section class="hero-section" id="hero">
-                <div class="hero-content" id="hero-content">
-                    <!-- Generated automatically -->
-                </div>
-            </section>
-
-            <!-- Recent Posts Preview Section -->
-            <section class="section" id="recent-posts">
-                <h2 class="section-title">Recent Posts</h2>
-                <p class="section-intro">I write about topics I'm learning and exploring in data science and machine learning.</p>
-                <div class="blog-preview-list" id="blog-preview-list">
-                    <!-- Generated automatically -->
-                </div>
-                <div class="blog-preview-footer">
-                    <a href="blog.html" class="blog-view-all-link">View all posts →</a>
-                </div>
-            </section>
-
-            <!-- Highlights Section - Generated from cv-data.js -->
-            <section class="section" id="highlights">
-                <h2 class="section-title">Highlights</h2>
-                <p class="section-intro">Some of my notable projects and achievements.</p>
-                <div class="awards-list" id="highlights-list">
-                    <!-- Generated automatically -->
-                </div>
-            </section>
-
             <!-- Work Experience and Education - Side by Side -->
             <div class="sections-row">
                 <!-- Work Experience Section - Generated from cv-data.js -->
                 <section class="section section-half" id="work-experience">
-                    <h2 class="section-title">Work</h2>
-                    <p class="section-intro">My professional journey in data science and machine learning.</p>
+                    <h2 class="section-title">Work Experience</h2>
                     <div class="timeline" id="work-experience-list">
                         <!-- Generated automatically -->
                     </div>
@@ -80,7 +50,6 @@
                 <!-- Education Section - Generated from cv-data.js -->
                 <section class="section section-half" id="education">
                     <h2 class="section-title">Education</h2>
-                    <p class="section-intro">My academic background and learning path.</p>
                     <div class="timeline" id="education-list">
                         <!-- Generated automatically -->
                     </div>
@@ -89,10 +58,28 @@
 
             <!-- Publications Section - Generated from cv-data.js -->
             <section class="section" id="publications">
-                <h2 class="section-title">Research & Publications</h2>
-                <p class="section-intro">My research contributions in machine learning and uplift modeling.</p>
+                <h2 class="section-title">Publications</h2>
                 <div class="publications-list" id="publications-list">
                     <!-- Generated automatically -->
+                </div>
+            </section>            
+
+            <!-- Highlights Section - Generated from cv-data.js -->
+            <section class="section" id="highlights">
+                <h2 class="section-title">Highlights</h2>
+                <div class="awards-list" id="highlights-list">
+                    <!-- Generated automatically -->
+                </div>
+            </section>
+
+            <!-- Recent Posts Preview Section -->
+            <section class="section" id="recent-posts">
+                <h2 class="section-title">Recent Posts</h2>
+                <div class="blog-preview-list" id="blog-preview-list">
+                    <!-- Generated automatically -->
+                </div>
+                <div class="blog-preview-footer">
+                    <a href="blog.html" class="blog-view-all-link">View all posts →</a>
                 </div>
             </section>
 
