--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- Fixed Left Sidebar Navigation -->
     <aside class="cv-sidebar" id="cv-sidebar">
         <nav class="cv-nav" id="cv-nav">
+            <a href="#recent-posts" class="cv-nav-link">Posts</a>
             <a href="#work-experience" class="cv-nav-link">Experience</a>
             <a href="#education" class="cv-nav-link">Education</a>
-            <a href="#publications" class="cv-nav-link">Publications</a>
-            <!-- <a href="#skills" class="cv-nav-link">Skills</a> -->
             <a href="#highlights" class="cv-nav-link">Highlights</a>
-            <a href="blog.html" class="cv-nav-link cv-nav-link-external">Posts</a>
+            <a href="#publications" class="cv-nav-link">Publications</a>
+            <a href="blog.html" class="cv-nav-link cv-nav-link-external">All Posts</a>
         </nav>
     </aside>
     
@@ -37,6 +37,17 @@
     <main class="main-content main-content-with-sidebar">
         <div class="container">
             
+            <!-- Recent Posts Preview Section -->
+            <section class="section" id="recent-posts">
+                <h2 class="section-title">Recent Posts</h2>
+                <div class="blog-preview-list" id="blog-preview-list">
+                    <!-- Generated automatically -->
+                </div>
+                <div class="blog-preview-footer">
+                    <a href="blog.html" class="blog-view-all-link">View all posts →</a>
+                </div>
+            </section>
+
             <!-- Work Experience and Education - Side by Side -->
             <div class="sections-row">
                 <!-- Work Experience Section - Generated from cv-data.js -->
@@ -56,14 +67,6 @@
                 </section>
             </div>
 
-            <!-- Publications Section - Generated from cv-data.js -->
-            <section class="section" id="publications">
-                <h2 class="section-title">Publications</h2>
-                <div class="publications-list" id="publications-list">
-                    <!-- Generated automatically -->
-                </div>
-            </section>            
-
             <!-- Highlights Section - Generated from cv-data.js -->
             <section class="section" id="highlights">
                 <h2 class="section-title">Highlights</h2>
@@ -72,14 +75,11 @@
                 </div>
             </section>
 
-            <!-- Recent Posts Preview Section -->
-            <section class="section" id="recent-posts">
-                <h2 class="section-title">Recent Posts</h2>
-                <div class="blog-preview-list" id="blog-preview-list">
+            <!-- Publications Section - Generated from cv-data.js -->
+            <section class="section" id="publications">
+                <h2 class="section-title">Publications</h2>
+                <div class="publications-list" id="publications-list">
                     <!-- Generated automatically -->
-                </div>
-                <div class="blog-preview-footer">
-                    <a href="blog.html" class="blog-view-all-link">View all posts →</a>
                 </div>
             </section>
 
